--- a/calcBid/pom.xml
+++ b/calcBid/pom.xml
@@ -10,6 +10,12 @@
   <dependencies>
 
     <dependency>
+      <groupId>c3p0</groupId>
+      <artifactId>c3p0</artifactId>
+      <version>0.9.1.2</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis-spring</artifactId>
       <version>1.2.0</version>
@@ -26,44 +32,52 @@
       <version>3.1.1.RELEASE</version>
     </dependency>
 
-<!--
-
- <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-beans</artifactId>
-      <version>3.1.1.RELEASE</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-aop</artifactId>
-      <version>3.1.1.RELEASE</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-      <version>3.1.1.RELEASE</version>
-    </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
       <version>3.1.1.RELEASE</version>
     </dependency>
+
     <dependency>
-      <groupId>com.kingdee.youshang</groupId>
-      <artifactId>youshang-common</artifactId>
-      <version>2.1.16-SNAPSHOT</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>commons-httpclient</groupId>
-          <artifactId>commons-httpclient</artifactId>
-        </exclusion>
-      </exclusions>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.39</version>
     </dependency>
--->
+
+    <!--
+
+     <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-beans</artifactId>
+          <version>3.1.1.RELEASE</version>
+        </dependency>
+        <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-aop</artifactId>
+          <version>3.1.1.RELEASE</version>
+        </dependency>
+        <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-core</artifactId>
+          <version>3.1.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
+          <groupId>com.kingdee.youshang</groupId>
+          <artifactId>youshang-common</artifactId>
+          <version>2.1.16-SNAPSHOT</version>
+          <exclusions>
+            <exclusion>
+              <groupId>org.springframework</groupId>
+              <artifactId>spring</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>commons-httpclient</groupId>
+              <artifactId>commons-httpclient</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+    -->
 
 
 
@@ -71,6 +85,13 @@
       <groupId>org.apache.struts</groupId>
       <artifactId>struts-core</artifactId>
       <version>1.3.9</version>
+      <exclusions>
+        <!-- 这个就是我们要加的片断 -->
+        <exclusion>
+          <artifactId>commons-logging</artifactId>
+          <groupId>commons-logging</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
